# SEAL

./: .gitignore  CMakeLists.txt  build  build.sh
cmake/: ExternalIntelHEXL.cmake  ExternalIntelHEXLFPGA.cmake
native/bench/: CMakeLists.txt  bench.cpp  bench.h  fpga-ckks-bench.cpp
native/examples/: 7_performance.cpp  CMakeLists.txt  build.sh  examples.cpp  examples.h  fpga-ckks-example.cpp  run_hexl_fpga.sh  run_no_hexl.sh
native/examples/cmake/: gflags.cmake
native/src/seal/: context.cpp  context.h  encryptionparams.h  evaluator.cpp  evaluator.h
native/src/seal/util/: intel_seal_ext.h  ntt.cpp
native/tests/: CMakeLists.txt
native/tests/seal/: CMakeLists.txt  fpga-ckks-tests.cpp  testrunner.cpp
